<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/nav_edit"
           android:icon="@drawable/ic_edit_mode"
            android:title="@string/edit_note"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share_note"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete_note"
            app:showAsAction="ifRoom"/>
    </group>


</menu>