<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dash_board">DashBoard</string>

    <!-- Welcome Activity -->
    <string name="welcome_text">Keeping your notes neatly arranged</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_create_note">CreateNote</string>

    <!-- Create Note Activity -->
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>


    <!-- List Notes Activity -->
    <string name="share_note">Share</string>
    <string name="delete_note">Delete</string>
    <string name="edit_note">Edit</string>
    <string name="listnote">Notes</string>
    <string name="title_activity_list_notes">Notes</string>
    <string name="search">Search</string>
    <string name="title_activity_read_note">ReadNote</string>
    <string name="title_activity_trash">Trash</string>
    <string name="title_activity_app_settings">AppSettings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="trash_note">Trash</string>
    <string name="title_activity_note_view">NoteView</string>


</resources>
